--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -1,11 +1,9 @@
-name: Build, Lint And Test
+name: Mac Build Test Lint
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on:
-    pull_request_target:
-      types: [opened, synchronize, reopened]
+on: [push]
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
+  Mac-Build-Test-Lint:
+    runs-on: macos-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
