--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -1,5 +1,5 @@
 name: Windows Build Test Lint
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: Building, Testing And Linting On Windows 🚀
 on: [push]
 jobs:
   Windows-Build-Test-Lint:
@@ -12,4 +12,6 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - run: ruby code/programs/ruby/monorepo_build/build.rb
+      - uses: actions/setup-go@v5
+      - run: go version
+      - run: ruby code/programs/ruby/monorepo_build/build.rb'
