--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -13,5 +13,7 @@ jobs:
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - uses: actions/setup-go@v5
+        with:
+          go-version: '^1.23.3' # The Go version to download (if necessary) and use.
       - run: go version
       - run: ruby code/programs/ruby/monorepo_build/build.rb'
