Add C Hello World Program Using Clang

--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -16,4 +16,5 @@ jobs:
       - run: go version
       - run: brew install rust
       - run: rustc --help
+      - run: clang -v
       - run: ruby code/programs/ruby/monorepo_build/build.rb
