--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -15,4 +15,5 @@ jobs:
       - run: go version
       - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs -y 1
       - run: clang -v
+      - run: gcc --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
