--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -17,4 +17,5 @@ jobs:
       - run: brew install rust
       - run: rustc --help
       - run: clang -v
+      - run: gcc --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
