Install GFortran in Mac to enable Fortran build

--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -18,4 +18,5 @@ jobs:
       - run: rustc --help
       - run: clang -v
       - run: gcc --version
+      - run: brew install gfortran
       - run: ruby code/programs/ruby/monorepo_build/build.rb
