Add Hello World COBOL Program

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -17,4 +17,5 @@ jobs:
       - run: clang -v
       - run: gcc --version
       - run: sudo apt-get install erlang
+      - run: sudo apt-get install gnucobol
       - run: ruby code/programs/ruby/monorepo_build/build.rb
