--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -20,4 +20,5 @@ jobs:
       - run: gcc --version
       - run: brew install gfortran
       - run: brew install erlang
+      - run: brew install gnucobol
       - run: ruby code/programs/ruby/monorepo_build/build.rb
