Add Perl To Monorepo

--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -20,4 +20,5 @@ jobs:
       - run: gcc --version
       - run: choco install erlang
       - run: choco install gnucobol
+      - run: choco install strawberryperl
       - run: ruby code/programs/ruby/monorepo_build/build.rb
