Add Haskell To Monorepo

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -19,4 +19,6 @@ jobs:
       - run: gcc --version
       - run: sudo apt-get install erlang
       - run: sudo apt-get install gnucobol
+      - run: sudo apt-get install build-essential curl libffi-dev libffi6 libgmp-dev libgmp10 libncurses-dev libncurses5 libtinfo5
+      - run: curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | sh
       - run: ruby code/programs/ruby/monorepo_build/build.rb
