--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -22,4 +22,5 @@ jobs:
       - run: brew install erlang
       - run: brew install gnucobol
       - run: curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | sh
+      - run: source /Users/runner/.ghcup/env
       - run: ruby code/programs/ruby/monorepo_build/build.rb
