--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -21,6 +21,5 @@ jobs:
       - run: brew install gfortran
       - run: brew install erlang
       - run: brew install gnucobol
-      - run: curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | sh
-      - run: source /Users/runner/.ghcup/env
+      - run: brew install ghc
       - run: ruby code/programs/ruby/monorepo_build/build.rb
