Add Haskell To Monorepo (#32)
* Add Haskell To Monorepo

* Fix linux build error

* Fix GHC compilation error

* Fix path issue

* Remove refreshenv as it is not needed anymore

* GHC is missing in mac terminal for some reason. So, trying a fix

* Use ghc homebrew package instead of downloading GHCup

--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -21,4 +21,5 @@ jobs:
       - run: brew install gfortran
       - run: brew install erlang
       - run: brew install gnucobol
+      - run: brew install ghc
       - run: ruby code/programs/ruby/monorepo_build/build.rb
