--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -20,4 +20,6 @@ jobs:
       - run: sudo apt-get install erlang
       - run: sudo apt-get install gnucobol
       - run: curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | sh
+      - run: sudo apt-get install openjdk-23-jdk
+      - run: sudo apt-get install openjdk-23-jre
       - run: ruby code/programs/ruby/monorepo_build/build.rb
