--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -22,4 +22,5 @@ jobs:
       - run: brew install erlang
       - run: brew install gnucobol
       - run: brew install ghc
+      - run: brew install openjdk
       - run: ruby code/programs/ruby/monorepo_build/build.rb
