--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -26,4 +26,5 @@ jobs:
       - run: wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh
       - run: chmod +x ./dotnet-install.sh
       - run: ./dotnet-install.sh --version latest
+      - run: dotnet --help
       - run: ruby code/programs/ruby/monorepo_build/build.rb
