--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -24,5 +24,5 @@ jobs:
       - run: choco install haskell-dev
       - run: choco install openjdk
       - run: choco install zig
-      - run: csc --help
+      - run: dotnet --help
       - run: ruby code/programs/ruby/monorepo_build/build.rb
