--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -23,8 +23,8 @@ jobs:
       - run: sudo apt-get install openjdk-17-jdk
       - run: sudo apt-get install openjdk-17-jre
       - run: sudo snap install zig --classic --beta
-      - run: wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh
-      - run: chmod +x ./dotnet-install.sh
-      - run: ./dotnet-install.sh --version latest
+      - run: sudo add-apt-repository ppa:dotnet/backports
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y dotnet-sdk-9.0
       - run: dotnet --help
       - run: ruby code/programs/ruby/monorepo_build/build.rb
