Add CSharp To Monorepo (#35)
* Add CSharp To Monorepo

* Add helloworld program and use dotnet to build and compile C# programs

* Ignore the solution file generated by Visual Studio tools used locally

* Linux is failing to find dotnet for some reason. So, trying a different installation method

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -23,4 +23,8 @@ jobs:
       - run: sudo apt-get install openjdk-17-jdk
       - run: sudo apt-get install openjdk-17-jre
       - run: sudo snap install zig --classic --beta
+      - run: sudo add-apt-repository ppa:dotnet/backports
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y dotnet-sdk-9.0
+      - run: dotnet --help
       - run: ruby code/programs/ruby/monorepo_build/build.rb
