--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -24,4 +24,6 @@ jobs:
       - run: brew install ghc
       - run: brew install openjdk
       - run: brew install zig
+      - run: brew install --cask dotnet-sdk
+      - run: dotnet --help
       - run: ruby code/programs/ruby/monorepo_build/build.rb
