Forgot to add a build step for lua. So, adding it now

--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -27,4 +27,5 @@ jobs:
       - run: brew install --cask dotnet-sdk
       - run: dotnet --help
       - run: brew install lua
+      - run: lua -v
       - run: ruby code/programs/ruby/monorepo_build/build.rb
