--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -28,4 +28,5 @@ jobs:
       - run: sudo apt-get install -y dotnet-sdk-9.0
       - run: dotnet --help
       - run: sudo apt-get install lua5.4 liblua5.4-dev
+      - run: lua -v
       - run: ruby code/programs/ruby/monorepo_build/build.rb
