--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -26,4 +26,5 @@ jobs:
       - run: choco install zig
       - run: dotnet --help
       - run: choco install lua
+      - run: lua -v
       - run: ruby code/programs/ruby/monorepo_build/build.rb
