--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -26,4 +26,6 @@ jobs:
       - run: brew install zig
       - run: brew install --cask dotnet-sdk
       - run: dotnet --help
+      - run: brew install lua
+      - run: lua -v
       - run: ruby code/programs/ruby/monorepo_build/build.rb
