Add Powershell Support In Monorepo

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -29,4 +29,5 @@ jobs:
       - run: dotnet --help
       - run: sudo apt-get install lua5.4 liblua5.4-dev
       - run: lua -v
+      - run: sudo snap install powershell --classic
       - run: ruby code/programs/ruby/monorepo_build/build.rb
