--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -28,4 +28,5 @@ jobs:
       - run: dotnet --help
       - run: brew install lua
       - run: lua -v
+      - run: brew install powershell/tap/powershell
       - run: ruby code/programs/ruby/monorepo_build/build.rb
