--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Set up Visual Studio Build Tools
+        uses: ilammy/msvc-dev-cmd@v1
       - name: Installing necessary software and running the build script
         shell: pwsh
         run: |
@@ -32,4 +34,4 @@ jobs:
           Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
           refreshenv
           lua -v
-          ruby code/programs/ruby/monorepo_build/build.rb
+          ruby code\programs\ruby\monorepo_build\build.rb
