--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -12,8 +12,9 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Installing necessary software and running the build script
+      - name: Add Visual Studio Build Tools To Path
         uses: ilammy/msvc-dev-cmd@v1
+      - name: Installing necessary software and running the build script
         shell: pwsh
         run: |
           go version
