--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -12,8 +12,12 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Add Visual Studio Build Tools To Path
-        uses: ilammy/msvc-dev-cmd@v1
+      - name: Locate and Setup MSVC
+        shell: cmd
+        run: |
+          for /f "usebackq tokens=*" %%i in (`vswhere -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath`) do set VCINSTALLDIR=%%i
+          call "%VCINSTALLDIR%\VC\Auxiliary\Build\vcvars64.bat"
+            cl.exe /?
       - name: Installing necessary software and running the build script
         shell: pwsh
         run: |
