Add Support For R In Monorepo
R is an important language to learn. So, setting it up in the Monorepo.

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -27,4 +27,5 @@ jobs:
       - run: sudo apt-get update
       - run: sudo apt-get install -y dotnet-sdk-9.0
       - run: dotnet --help
+      - run: sudo apt-get install r-base
       - run: ruby code/programs/ruby/monorepo_build/build.rb
