Add Support For R In Monorepo (#49)
* Add Support For R In Monorepo

R is an important language to learn. So, setting it up in the Monorepo.

* Attempting a fix for the linux build failing.

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -27,6 +27,7 @@ jobs:
       - run: sudo apt-get update
       - run: sudo apt-get install -y dotnet-sdk-9.0
       - run: dotnet --help
+      - run: sudo apt-get install r-base-core
       - run: sudo apt-get install lua5.4 liblua5.4-dev
       - run: lua -v
       - run: sudo snap install powershell --classic
