--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -26,6 +26,7 @@ jobs:
       - run: brew install zig
       - run: brew install --cask dotnet-sdk
       - run: dotnet --help
+      - run: brew install r
       - run: brew install lua
       - run: lua -v
       - run: brew install powershell/tap/powershell
