Virtual Machine Implementation Part 1 - Add Program Class & Tests

--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -32,6 +32,7 @@ jobs:
           dotnet --help
           choco install lua
           choco install r
+          gem install rspec
           Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
           refreshenv
           lua -v
