--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -30,4 +30,5 @@ jobs:
       - run: brew install lua
       - run: lua -v
       - run: brew install powershell/tap/powershell
+      - run: gem install rspec
       - run: ruby code/programs/ruby/monorepo_build/build.rb
