Fix for linux permissions error

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -31,5 +31,5 @@ jobs:
       - run: sudo apt-get install lua5.4 liblua5.4-dev
       - run: lua -v
       - run: sudo snap install powershell --classic
-      - run: gem install rspec
+      - run: sudo gem install rspec
       - run: ruby code/programs/ruby/monorepo_build/build.rb
