Fix up missing `tsc`

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -32,4 +32,5 @@ jobs:
       - run: lua -v
       - run: sudo snap install powershell --classic
       - run: sudo gem install rspec
+      - run: sudo npm install -g typescript
       - run: ruby code/programs/ruby/monorepo_build/build.rb
