Forgot to install bundler. So, fixing it.

--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -37,4 +37,5 @@ jobs:
           refreshenv
           lua -v
           npm install -g typescript
+          gem install bundler
           ruby code\programs\ruby\monorepo_build\build.rb
