--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -12,6 +12,10 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Set up Ruby with DevKit
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.3
       - name: Set up Visual Studio Build Tools
         uses: ilammy/msvc-dev-cmd@v1
       - name: Installing necessary software and running the build script
