--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -18,6 +18,10 @@ jobs:
           ruby-version: 3.3
       - name: Set up Visual Studio Build Tools
         uses: ilammy/msvc-dev-cmd@v1
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3'
+          bundler-cache: true
       - name: Installing necessary software and running the build script
         shell: pwsh
         run: |
