--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -41,5 +41,5 @@ jobs:
           refreshenv
           lua -v
           npm install -g typescript
-          choco install deno
+          irm https://deno.land/install.ps1 | iex
           ruby code\programs\ruby\monorepo_build\build.rb
