Add Deno To Monorepo (#57)
* Add Deno To Monorepo

* Try switching to homebrew for Mac install

* Trying a fix for Deno documentation

* Attempt to install Deno using the powershell script to see if it resolves the problem on Windows

--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -45,4 +45,5 @@ jobs:
           refreshenv
           lua -v
           npm install -g typescript
+          irm https://deno.land/install.ps1 | iex
           ruby code\programs\ruby\monorepo_build\build.rb
