--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -32,5 +32,6 @@ jobs:
       - run: brew install powershell/tap/powershell
       - run: gem install rspec
       - run: npm install -g typescript
+      - run: curl -fsSL https://deno.land/x/install/install.sh | sudo DENO_INSTALL=/usr/local sh
       - run: gem install bundler
       - run: ruby code/programs/ruby/monorepo_build/build.rb
