Add Bun To Monorepo

--- a/.github/workflows/linux-build-test-lint.yml
+++ b/.github/workflows/linux-build-test-lint.yml
@@ -35,4 +35,5 @@ jobs:
       - run: sudo npm install -g typescript
       - run: curl -fsSL https://deno.land/x/install/install.sh | sudo DENO_INSTALL=/usr/local sh
       - run: sudo gem install bundler
+      - run: curl -fsSL https://bun.sh/install | bash
       - run: ruby code/programs/ruby/monorepo_build/build.rb
