Attempt To UseCMake To Compile C Code

--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -47,4 +47,5 @@ jobs:
           npm install -g typescript
           irm https://deno.land/install.ps1 | iex
           npm install -g bun
+          cmake --version
           ruby code\programs\ruby\monorepo_build\build.rb
