--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -35,4 +35,5 @@ jobs:
       - run: curl -fsSL https://deno.land/x/install/install.sh | sudo DENO_INSTALL=/usr/local sh
       - run: gem install bundler
       - run: npm install -g bun
+      - run: cmake --version
       - run: ruby code/programs/ruby/monorepo_build/build.rb
