--- a/code/programs/c/hello_world/CMakeLists.txt
+++ b/code/programs/c/hello_world/CMakeLists.txt
@@ -1,25 +1,32 @@
 cmake_minimum_required(VERSION 3.15)
-project(MultiCompilerCProject C)
+project(hello_cmake C)
 
+# Require C99 standard
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
+
+# Export compile_commands.json for tooling (e.g., clangd, VSCode)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Print selected compiler
+# Detect and normalize the compiler name
+string(TOLOWER "${CMAKE_C_COMPILER_ID}" COMPILER_NAME)
+
+# Log compiler info
 message(STATUS "Using compiler: ${CMAKE_C_COMPILER_ID} (${CMAKE_C_COMPILER})")
+message(STATUS "Compiler name (normalized): ${COMPILER_NAME}")
 
-# Optional: print warning on unknown compiler
-if (NOT CMAKE_C_COMPILER_ID MATCHES "GNU|Clang|AppleClang|MSVC")
-  message(WARNING "Unknown compiler detected: ${CMAKE_C_COMPILER_ID}")
-endif()
+# Output directory (per compiler)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin-${COMPILER_NAME}")
 
-# Add your executable or library
-add_executable(hello_world src/hello_world.c)
+# Optionally: name the executable uniquely
+set(EXE_NAME "hello-world-${COMPILER_NAME}")
 
-# Optionally set warnings and sanitizer flags based on compiler
+# Define the executable
+add_executable(${EXE_NAME} src/hello_world.c)
+
+# Add compiler-specific warning flags
 if (CMAKE_C_COMPILER_ID MATCHES "GNU|Clang|AppleClang")
-  target_compile_options(hello_world PRIVATE -Wall -Wextra -fsanitize=address,undefined -g)
-  target_link_options(hello_world PRIVATE -fsanitize=address,undefined)
+    target_compile_options(${EXE_NAME} PRIVATE -Wall -Wextra -pedantic)
 elseif (CMAKE_C_COMPILER_ID STREQUAL "MSVC")
-  target_compile_options(hello_world PRIVATE /W4 /permissive-)
+    target_compile_options(${EXE_NAME} PRIVATE /W4 /permissive-)
 endif()
