Attempting to see if manually installing GCC in mac fixes the issue

--- a/.github/workflows/mac-build-test-lint.yml
+++ b/.github/workflows/mac-build-test-lint.yml
@@ -17,7 +17,8 @@ jobs:
       - run: brew install rust
       - run: rustc --help
       - run: clang -v
-      - run: gcc --version
+      - run: brew install gcc
+      - run: gcc-13 --version
       - run: brew install gfortran
       - run: brew install erlang
       - run: brew install gnucobol
