--- a/.github/workflows/windows-build-test-lint.yml
+++ b/.github/workflows/windows-build-test-lint.yml
@@ -16,8 +16,8 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3
-      - name: Set up Visual Studio Build Tools
-        uses: ilammy/msvc-dev-cmd@v1
+      - name: Setup MSVC Compiler Environment
+        uses: TheMrMilchmann/setup-msvc-dev@v3
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.3'
